# ibd_particle

./: README.md  ibd_particle.cabal
src/: BigMultiNom.hs  Common.hs  Main.hs  ParseMorg.hs  Sim.hs  Types.hs
