name:           IbdParticle
version:        0.0
synopsis:       Port of Morgan ibd_haplo
author:         Chris Glazner
license:        AllRightsReserved
build-type:     Simple
cabal-version:  >= 1.2

executable ibd_particle
  build-depends: base, bytestring, 
      containers , mtl, 
      QuickCheck, parsec, parallel, MonadRandom, random, 
      ListZipper, random-shuffle, 
      stream-fusion, polynomial, lens, deepseq, bimap,
      vector, mersenne-random-pure64,
      data-partition == 0.2.0.0, pretty-show, time, tf-random

  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options: -O2   -threaded -eventlog -rtsopts -auto-all -caf-all  -optl-static  -optl-pthread -Wall -fno-warn-incomplete-patterns -fno-warn-missing-signatures
  if flag(debug)
    cpp-options:  -DDEBUG
-- -auto-all -caf-all -eventlog --(for threadscope)

flag debug
  description: Enable debug logging
  default:     True

